--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/LOGO_cons.png" alt="">
+                      <img src="assets/images/LOGO_media.png" alt="">
                       <h4>SV Media<br><span>Comunicación</span></h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
